# GraphicsTesting

./: CMakeLists.txt
.cache/clangd/index/: Shader.cpp.853AFADC45000C3D.idx  Shader.cpp.94A4989F3A03942F.idx  ShaderCompiler.cpp.65D52A62D6AFD774.idx  ShaderCompiler.cpp.9C9FF25B492785CA.idx  glad.c.1AEFFD4EEE10D198.idx  glad.c.3E8F6D40A0370E8B.idx  glad.c.72E53691CDF7FC50.idx  glad.h.4A54AAA77DEE8659.idx  glad.h.A00297EB5AB79E88.idx  glad.h.E7372276FED0B06A.idx  khrplatform.h.0924C13EDD7E1543.idx  khrplatform.h.3CD8E6D8AA2C0518.idx  khrplatform.h.6B765B7ABB17316B.idx  main.cpp.04BCB34D686D5CD8.idx  main.cpp.2189C52DC90A2B6C.idx  main.cpp.FD8D398F345BF132.idx  shader.h.0B9DC560DF6BA812.idx  shader_compiler.h.23BAC7C9C048A357.idx  shader_compiler.h.3622A72856008FD3.idx  triangleRenderer.cpp.368658F4F63D0BD8.idx  triangleRenderer.h.CCDB11779C1E39E6.idx
includes/custom_headers/: shader_compiler.h  triangleRenderer.h
includes/glad/: glad.h
resources/: fragmentShader.glsl  vertexshader.glsl
src/: Shader.cpp  ShaderCompiler.cpp  glad.c  main.cpp  triangleRenderer.cpp
